# ai-service-desk

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  locust.py  profile.stats  profiletest.py  pyproject.toml
alembic/: env.py
alembic/versions/: 4536cf50c35f_create_tickets_table.py  6f9ce9b1c12d_sample.py  f0ae0a9dbb8d_add_assignee_email.py
app/: main.py
app/api/: ai.py  tickets.py
app/core/: config.py  deps.py  exceptions.py
app/db/: database.py
app/middleware/: response_time.py
app/models/: ticket.py
app/repositories/: ticket_repository.py
app/schemas/: ticket.py
app/services/: aws_bedrock.py  prompt_template.py  ticket_service.py
tests/: conftest.py
tests/integration/: test_create.py  test_delete.py  test_get.py  test_update.py
tests/unit/: test_ticket_unit.py
